Refactor login and register form styles

--- a/Web/src/style.css
+++ b/Web/src/style.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.el-input__wrapper.is-focus{
+    box-shadow: 0 0 0 1px rgb(121,168,169) inset;
+}
