--- a/Web/src/style.css
+++ b/Web/src/style.css
@@ -13,3 +13,34 @@
 ul::-webkit-scrollbar {
 	display: none;
 }
+
+article::-webkit-scrollbar {
+    display: none;
+}
+
+article, article *{
+    @apply select-text;
+}
+
+.content a{
+    position: relative;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+.content a::after{
+    @apply bg-theme-color-2;
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    transition: width 0.5s;
+}
+.content a:hover::after{
+    width: 100%;
+}
+.content:hover{
+    color: black;
+}
